@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                                                                                                                                                                                                                                
+                                                                                                                                                                                                                                                                
     
     
     
@@ -58,8 +58,16 @@
     
     
     
-    <wb-module deploy-name="Acme-ANS-D01">
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
+    
+    
+    
+    
+    <wb-module deploy-name="Acme-ANS-D04">
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
+        
+        
+        
+        
         
         
         
@@ -118,7 +126,11 @@
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
+        
+        
+        
+        
         
         
         
@@ -177,7 +189,11 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                                                                                                                                                                                                                                                                                                                                
+                                                                                                                                                                                                                                                                                                                                                                                                                
+        
+        
+        
+        
         
         
         
@@ -237,22 +253,23 @@
         
         
         
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/acme-framework"/>
-                                                                                        
-        
-        
-        
-        
-        
-        
-        
-        
-        
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                        
+                                                        
+        
+        
+        
+        
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated-sources/annotations"/>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
+                                
+        
+        
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/acme-framework-25.2.0"/>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
+        
+        
+        
+        
         
         
         
@@ -311,8 +328,16 @@
         
         
         <property name="java-output-path" value="/Hello-World-22.0/target/classes"/>
+                                        
+        
+        
+        
         <property name="context-root" value="Acme-ANS"/>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            
+    
+    
+    
+    
     
     
     
@@ -372,7 +397,11 @@
     
     
     </wb-module>
-                                                                                                                                                                                                                                            
+                                                                                                                                                                                                                                                            
+
+
+
+
 
 
 
