@@ -22,14 +22,14 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>Acme-ANS</artifactId>
-	<version>D02</version> <!-- Omit the version tag unless it's different from the parent version -->
+	<version>D04</version> <!-- Omit the version tag unless it's different from the parent version -->
 	<packaging>war</packaging>
 
 	<parent>
 		<groupId>Acme</groupId>
 		<artifactId>pom</artifactId>
-		<version>25.1.0</version>
-		<relativePath>../../pom-25.1.0.xml</relativePath>
+		<version>25.5.0</version>
+		<relativePath>../../pom-25.5.0.xml</relativePath>
 	</parent>
 
 </project>
